fixed spacing issues

--- a/gdl.css
+++ b/gdl.css
@@ -278,7 +278,7 @@ html {
         flex-grow: 1;
         font-family: "Ancizar Serif", serif;
         font-size: 1em;
-        color: #333333;
+        color: #FAF0E6;
     }
 
     .menu-search-bar-container input::placeholder {
